// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BrandSetting /> should render properly given props 1`] = `
<BrandSetting
  BrandSettingStatuses={
    Array [
      "account info",
      "ad pixel",
      "connected properties",
    ]
  }
>
  <div>
    <div
      className="brandItem"
    >
      <div
        className="brands"
      >
        Brand
      </div>
    </div>
    <BrandSettingStatusItem
      name="account info"
    >
      <div
        className="brandItem brandItemInactive"
      >
        <div
          className="brandContent"
        >
          <div
            className="icon"
          >
            <test-file-stub />
          </div>
          <div
            className="name"
            data-field="name"
          >
            account info
          </div>
        </div>
      </div>
    </BrandSettingStatusItem>
    <BrandSettingStatusItem
      name="ad pixel"
    >
      <div
        className="brandItem brandItemInactive"
      >
        <div
          className="brandContent"
        >
          <div
            className="icon"
          >
            <test-file-stub />
          </div>
          <div
            className="name"
            data-field="name"
          >
            ad pixel
          </div>
        </div>
      </div>
    </BrandSettingStatusItem>
    <BrandSettingStatusItem
      name="connected properties"
    >
      <div
        className="brandItem brandItemInactive"
      >
        <div
          className="brandContent"
        >
          <div
            className="icon"
          >
            <test-file-stub />
          </div>
          <div
            className="name"
            data-field="name"
          >
            connected properties
          </div>
        </div>
      </div>
    </BrandSettingStatusItem>
  </div>
</BrandSetting>
`;

exports[`<BrandSettingStatusItem /> should render properly given props 1`] = `
<div
  className="brandItem brandItemInactive"
>
  <div
    className="brandContent"
  >
    <div
      className="icon"
    >
      <test-file-stub />
    </div>
    <div
      className="name"
      data-field="name"
    >
      account info
    </div>
  </div>
</div>
`;
